# GreenIot

./: .gitignore  DOCUMENTATION_INDEX.md  INTEGRATION_SUMMARY.md  README.md
01_Requirements/: Firmware_Requirements.md  README.md
02_Hardware/: README.md
03_Firmware/GreenIot/: CHANGELOG.md  CMakeLists.txt  DOCUMENTATION_INDEX.md  HARDWARE_TEST_CHECKLIST.md  README.md  partitions.csv  platformio.ini  run_tests.sh  sdkconfig.defaults  sdkconfig.esp32-c3-devkitm-1
03_Firmware/GreenIot/src/: CMakeLists.txt  main.cpp  system.cpp  system.cpp.old
03_Firmware/GreenIot/src/Application/Inc/: StateMachine.hpp
03_Firmware/GreenIot/src/Application/Src/: StateMachine.cpp
03_Firmware/GreenIot/src/Core/Src/: main.cpp
03_Firmware/GreenIot/src/Drivers/: i2c_driver.cpp
03_Firmware/GreenIot/src/Drivers/Inc/: I2CDriver.hpp
03_Firmware/GreenIot/src/Drivers/Src/: I2CDriver.cpp
03_Firmware/GreenIot/src/HAL/Sensor/: sensor_interface.cpp  sht31_driver.cpp
03_Firmware/GreenIot/src/HAL/Sensor/Inc/: ISensor.hpp  SHT31Sensor.hpp
03_Firmware/GreenIot/src/HAL/Sensor/Src/: SHT31Sensor.cpp  SensorFactory.cpp
03_Firmware/GreenIot/src/HAL/Wireless/: ble_mesh_driver.cpp
03_Firmware/GreenIot/src/HAL/Wireless/Inc/: BLEMeshManager.hpp
03_Firmware/GreenIot/src/HAL/Wireless/Src/: BLEMeshManager.cpp
03_Firmware/GreenIot/src/Services/Inc/: PowerManager.hpp
03_Firmware/GreenIot/src/Services/Src/: PowerManager.cpp
05_Test_and_Validation/: README.md
06_Production/: README.md
06_Production/BOM/: COMPONENT_SELECTION_NOTES.md  GreenIoT_BOM.csv  (+2 more)
07_Documentation/: README.md
08_Project_Management/: README.md
(+30 files in other folders)
